--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Good Pay</title>
+  <script type="module" src="js/index.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="js/index.js" defer></script>
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
+  <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
   <header>
@@ -44,18 +44,18 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                   aria-labelledby="panelsStayOpen-headingOne">
                   <div class="accordion-body">
-                    <div class="input-group input-group-lg mb-2">
+                    <div class="input-group input-group-lg mb-2">         
                       <span class="input-group-text btnAjuste" id="inputGroup-sizing-lg">Login</span>
-                      <input type="text" class="form-control" aria-label="Sizing example input"
+                      <input id="Login" type="text" class="form-control" aria-label="Sizing example input"
                         aria-describedby="inputGroup-sizing-lg" />
                     </div>
                     <div class="input-group input-group-lg mb-2">
                       <span class="input-group-text btnAjuste" id="inputGroup-sizing-lg">Senha</span>
-                      <input type="password" class="form-control" aria-label="Sizing example input"
+                      <input id="Senha" type="password" class="form-control" aria-label="Sizing example input"
                         aria-describedby="inputGroup-sizing-lg" />
-                    </div>                                                    
-                    <div class="d-grid gap-2 formAjuste">                    <!---->
-                      <button class="btn btn-outline-success" type="button" onclick="loginForm()">Entrar</button>                                                   <!---->
+                    </div>
+                    <div class="d-grid gap-2 formAjuste"> <!---->
+                      <button id="btnEntrar"class="btn btn-outline-success" type="button">Entrar</button>
                       <button class="btn btn-outline-primary" type="button">Cadastro</button>
                     </div>
                   </div>
@@ -88,7 +88,6 @@
                       adicionados neste interface não são enviados a um
                       serviço.
                     </p>
-                    **
                   </div>
                 </div>
               </div>
@@ -136,7 +135,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="card mb-3">
-              <img src="IMG/banner/BannerGoodPay.png" class="card-img-top" alt="Imagem Promocional para Banner" />
+              <img src="IMG/banner/BannerGoodPay.png" class="card-img-top" alt="Imagem Promocional para Banner"/>
               <div class="card-body">
                 <h5 class="card-title">Work for you</h5>
                 <p class="card-text">
@@ -203,7 +202,7 @@
           <div class="card-body">
             <h5 class="card-title">Planejamento</h5>
             <p class="card-text">
-              Faça seu dinheiro render utilizando os 
+              Faça seu dinheiro render utilizando os
               sistemas de investimento do GoodPay.
             </p>
             <p class="card-text">
@@ -216,7 +215,7 @@
           <div class="card-body">
             <h5 class="card-title">GP no Bolso</h5>
             <p class="card-text">
-              Com o App do GoodPay você acompanha seu porquinho 
+              Com o App do GoodPay você acompanha seu porquinho
               de qualquer lugar.
             </p>
             <p class="card-text">
@@ -229,7 +228,7 @@
           <div class="card-body">
             <h5 class="card-title">Gaste Bem</h5>
             <p class="card-text">
-              Planejar e gastar bem são os segredos de quem deseja 
+              Planejar e gastar bem são os segredos de quem deseja
               um investimento futuro e sua segurança financeira.
             </p>
             <p class="card-text">
@@ -240,12 +239,28 @@
       </div>
     </div>
   </main>
-  <!--Area do modal)-->
-  <footer>  
+  <!--Área do modal>-->
+  <div id="alertaLogin" class="modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Alerta do Login</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Mensagem de alerta</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"></script>
-      <script src="js/index.js" defer></script>
+      <script type="module" src="js/index.js"></script>
   </footer>
 </body>
 </html>
